Make treemap auto resize

--- a/webview-ui/src/components/treemap/TreemapPanel.css
+++ b/webview-ui/src/components/treemap/TreemapPanel.css
@@ -2,7 +2,8 @@
 .treemap-panel {
   display: flex;
   flex-direction: column;
-  height: 100%;
+  flex: 1;
+  min-height: 0;
   background: var(--vscode-editor-background);
 }
 
